deploy: a69a694ec841df64b059bacd714a4d85d3dc3869

--- a/ch07-05-separating-modules-into-different-files.html
+++ b/ch07-05-separating-modules-into-different-files.html
@@ -167,15 +167,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#separating-modules-into-different-files" id="separating-modules-into-different-files">Separating Modules into Different Files</a></h2>
-<p>So far, all the examples in this chapter defined multiple modules in one file.
-When modules get large, you might want to move their definitions to a separate
-file to make the code easier to navigate.</p>
-<p>For example, let’s start from the code in Listing 7-17 and move the
-<code>front_of_house</code> module to its own file <em>src/front_of_house.rs</em> by changing the
-crate root file so it contains the code shown in Listing 7-21. In this case,
-the crate root file is <em>src/lib.rs</em>, but this procedure also works with binary
-crates whose crate root file is <em>src/main.rs</em>.</p>
+                        <h2><a class="header" href="#將模組拆成不同檔案" id="將模組拆成不同檔案">將模組拆成不同檔案</a></h2>
+<p>本章節目前所有的範例將數個模組定義在同一個檔案中。當模組增長時，你可能會想要將它們的定義拆開到別的檔案中，好讓程式碼容易瀏覽。</p>
+<p>舉例來說，讓我修將範例 7-17 中的 <code>front_of_house</code> 模組移到它自己的檔案 <em>src/front_of_house.rs</em>，然後在 crate 源頭檔案加上這個模組，如範例 7-21 所示。在此例中，源頭檔案爲 <em>src/lib.rs</em> 不過這步驟在二進制執行檔 crate 的 src/main.rs* 一樣可行。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><code class="language-rust ignore">mod front_of_house;
 
@@ -187,28 +181,19 @@ pub fn eat_at_restaurant() {
     hosting::add_to_waitlist();
 }
 </code></pre>
-<p><span class="caption">範例 7-21: Declaring the <code>front_of_house</code> module whose
-body will be in <em>src/front_of_house.rs</em></span></p>
-<p>And <em>src/front_of_house.rs</em> gets the definitions from the body of the
-<code>front_of_house</code> module, as shown in Listing 7-22.</p>
+<p><span class="caption">範例 7-21：宣告 <code>front_of_house</code> 模組，其本體位於 <em>src/front_of_house.rs</em></span></p>
+<p>然後 <code>front_of_house</code> 模組的本體會定義在 <em>src/front_of_house.rs</em>，如範例 7-22 所示。</p>
 <p><span class="filename">檔案名稱：src/front_of_house.rs</span></p>
 <pre><code class="language-rust ignore">pub mod hosting {
     pub fn add_to_waitlist() {}
 }
 </code></pre>
-<p><span class="caption">範例 7-22: Definitions inside the <code>front_of_house</code>
-module in <em>src/front_of_house.rs</em></span></p>
-<p>Using a semicolon after <code>mod front_of_house</code> rather than using a block tells
-Rust to load the contents of the module from another file with the same name as
-the module. To continue with our example and extract the <code>hosting</code> module to
-its own file as well, we change <em>src/front_of_house.rs</em> to contain only the
-declaration of the <code>hosting</code> module:</p>
+<p><span class="caption">範例 7-22：<code>front_of_house</code> 模組的定義位於 <em>src/front_of_house.rs</em></span></p>
+<p>在 <code>mod front_of_house</code> 之後用分號而不是大括號會告訴 Rust 讀取其他與模組同名的檔案以取得模組內容。讓我們繼續將範例中的 <code>hosting</code> 模組也取出並移到它自己的檔案中，我們可以變更 <em>src/front_of_house.rs</em> 成只包含 <code>hosting</code> 模組的宣告</p>
 <p><span class="filename">檔案名稱：src/front_of_house.rs</span></p>
 <pre><code class="language-rust ignore">pub mod hosting;
 </code></pre>
-<p>Then we create a <em>src/front_of_house</em> directory and a file
-<em>src/front_of_house/hosting.rs</em> to contain the definitions made in the
-<code>hosting</code> module:</p>
+<p>然後我們建立一個目錄 <em>src/front_of_house</em> 以及一個檔案 <em>src/front_of_house/hosting.rs</em> 來包含 <code>hosting</code> 模組的定義：</p>
 <p><span class="filename">檔案名稱：src/front_of_house/hosting.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
@@ -216,24 +201,18 @@ declaration of the <code>hosting</code> module:</p>
 </span>pub fn add_to_waitlist() {}
 <span class="boring">}
 </span></code></pre></pre>
-<p>The module tree remains the same, and the function calls in <code>eat_at_restaurant</code>
-will work without any modification, even though the definitions live in
-different files. This technique lets you move modules to new files as they grow
-in size.</p>
-<p>Note that the <code>pub use crate::front_of_house::hosting</code> statement in
-<em>src/lib.rs</em> also hasn’t changed, nor does <code>use</code> have any impact on what files
-are compiled as part of the crate. The <code>mod</code> keyword declares modules, and Rust
-looks in a file with the same name as the module for the code that goes into
-that module.</p>
-<h2><a class="header" href="#summary" id="summary">Summary</a></h2>
-<p>Rust lets you split a package into multiple crates and a crate into modules
-so you can refer to items defined in one module from another module. You can do
-this by specifying absolute or relative paths. These paths can be brought into
-scope with a <code>use</code> statement so you can use a shorter path for multiple uses of
-the item in that scope. Module code is private by default, but you can make
-definitions public by adding the <code>pub</code> keyword.</p>
-<p>In the next chapter, we’ll look at some collection data structures in the
-standard library that you can use in your neatly organized code.</p>
+<p>雖然定義都被移到不同的檔案了，但模組樹維持不變，而且在 <code>eat_at_restaurant</code> 的函式呼叫方式也不用做任何更改。此技巧讓你可以將增長中的模組移到新的檔案。</p>
+<p>另外 <em>src/lib.rs</em> 內的 <code>pub use crate::front_of_house::hosting</code> 陳述式沒有改變，在檔案作爲 crate 的一部分來編譯時，使用 <code>use</code> 的方式也沒有改變。<code>mod</code> 關鍵字能宣告模組，然後 Rust 會去同名的檔案尋找該模組的程式碼。</p>
+<h2><a class="header" href="#總結" id="總結">總結</a></h2>
+<p>Rust 讓你能夠將套件拆成數個 crate，然後 crate 能在分成數個模組，好讓你可以從一個模組內指定其他模組的項目。而你可以使用絕對或相對路徑來達成。這些路徑可以用 <code>use</code> 陳述式來引入作用域，讓你可以在該作用域用更短的路徑來多次呼叫該項目。模組程式碼預設爲私有的，但你可以使用 <code>pub</code> 關鍵字公開它的定義內容。</p>
+<p>在下個章節，我們將探討在標準函式庫中的一些資料結構集合，讓你可以利用它們寫出整潔有組織的程式碼。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch07-05-separating-modules-into-different-files.md">e5ed971</a></li>
+<li>updated: 2020-09-11</li>
+</ul>
+</blockquote>
 
                     </main>
 
