deploy: 398b8d19beb5fa3562a6247908b061e50d96a572

--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -185,6 +185,7 @@
 <tr><td>boolean</td><td>布林</td><td>參考：<a href="https://zh.wikipedia.org/wiki/%E5%B8%83%E7%88%BE_(%E6%95%B8%E6%93%9A%E9%A1%9E%E5%9E%8B)">維基百科</a></td></tr>
 <tr><td>bounds-check</td><td>邊界檢查</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%BE%B9%E7%95%8C%E6%A3%80%E6%9F%A5">維基百科</a></td></tr>
 <tr><td>borrowing</td><td>借用</td><td></td></tr>
+<tr><td>borrow checker</td><td>借用檢查器</td><td></td></tr>
 <tr><td>bug</td><td>程式錯誤</td><td></td></tr>
 <tr><td>Builder Pattern</td><td>生成器模式</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E7%94%9F%E6%88%90%E5%99%A8%E6%A8%A1%E5%BC%8F">維基百科</a></td></tr>
 <tr><td>byte</td><td>位元組</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%AD%97%E8%8A%82">維基百科</a></td></tr>
