--- a/ch15-02-deref.html
+++ b/ch15-02-deref.html
@@ -186,7 +186,7 @@ build and the real <code>Box&lt;T&gt;</code>: our version will not store its dat
 We are focusing this example on <code>Deref</code>, so where the data is actually stored
 is less important than the pointer-like behavior.</p>
 </blockquote>
-<h3><a class="header" href="#following-the-pointer-to-the-value-with-the-dereference-operator" id="following-the-pointer-to-the-value-with-the-dereference-operator">Following the Pointer to the Value with the Dereference Operator</a></h3>
+<h3><a class="header" href="#使用解引用運算子追蹤指標的數值" id="使用解引用運算子追蹤指標的數值">使用解引用運算子追蹤指標的數值</a></h3>
 <p>A regular reference is a type of pointer, and one way to think of a pointer is
 as an arrow to a value stored somewhere else. In Listing 15-6, we create a
 reference to an <code>i32</code> value and then use the dereference operator to follow the
