--- a/ch19-00-advanced-features.html
+++ b/ch19-00-advanced-features.html
@@ -171,7 +171,7 @@
 <p>現在，你已經了解 Rust 程式語言最常用的部分。在開始做第二十章的另一個專案之前，先來了解你可能偶爾會遇到的語言種種面向。當你使用 Rust 碰到一些未知情況時，可以將本章作為技術文件查閱。雖然可能不會經常碰到這些，但我們希望確保你能掌握 Rust 提供的所有特色。</p>
 <p>本章涵蓋：</p>
 <ul>
-<li>Unsafe Rust：如何選擇捨棄部分 Rust 提供的保證，並自行負責維護這些保證</li>
+<li>Unsafe Rust：如何選擇捨棄部分 Rust 提供的保證，並自行負責遵守這些保證</li>
 <li>進階特徵：關聯型別（associated type）、預設型別參數（default type parameter），完全限定語法（fully qualified syntax），超特徵（supertrait），以及跟特徵相關的新型別模式（newtype pattern）</li>
 <li>進階型別：更多有關新型別模式、型別別名（type alias），never 型別，以及動態大小型別</li>
 <li>進階函式與閉包：函式指標與回傳閉包</li>
