deploy: 2a066ee993a8b8e9ae10534ba144d6551916a3a0

--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -192,6 +192,7 @@
 <tr><td>camel case</td><td>駝峰式大小寫</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E9%A7%9D%E5%B3%B0%E5%BC%8F%E5%A4%A7%E5%B0%8F%E5%AF%AB">維基百科</a></td></tr>
 <tr><td>child</td><td>下代</td><td></td></tr>
 <tr><td>clone</td><td>克隆</td><td></td></tr>
+<tr><td>coerce</td><td>強迫</td><td></td></tr>
 <tr><td>collection</td><td>集合</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E9%9B%86%E5%90%88_(%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%A7%91%E5%AD%A6)">維基百科</a></td></tr>
 <tr><td>command line</td><td>命令列</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%91%BD%E4%BB%A4%E8%A1%8C%E7%95%8C%E9%9D%A2">維基百科</a></td></tr>
 <tr><td>commit</td><td>提交</td><td></td></tr>
