--- a/ch01-02-hello-world.html
+++ b/ch01-02-hello-world.html
@@ -174,7 +174,7 @@
 </blockquote>
 <h3><a class="header" href="#建立專案目錄" id="建立專案目錄">建立專案目錄</a></h3>
 <p>你將先建立一個目錄來儲存你的 Rust 程式碼。程式碼位於何處並不重要，但爲了能好好練習書中的範例和專案，我們建議你可以在你的 home 目錄建立一個 <em>projects</em> 目錄然後將你所有的專案保存在此。</p>
-<p>請開啓終端機然後輸入以下命令來建立 <em>projects</em> 目錄和另一個在 <em>projects</em> 目錄底下的真正要寫「Hello, world!」專案的目錄。</p>
+<p>請開啟終端機然後輸入以下命令來建立 <em>projects</em> 目錄和另一個在 <em>projects</em> 目錄底下的真正要寫「Hello, world!」專案的目錄。</p>
 <p>對於 Linux、macOS 和 Windows 的 PowerShell，請輸入：</p>
 <pre><code class="language-console">$ mkdir ~/projects
 $ cd ~/projects
@@ -189,7 +189,7 @@ $ cd hello_world
 </code></pre>
 <h3><a class="header" href="#編寫並執行-rust-程式" id="編寫並執行-rust-程式">編寫並執行 Rust 程式</a></h3>
 <p>接著，請產生一個原始文件並叫做 <em>main.rs</em>。Rust 的文件檔案都會以 <em>.rs</em> 副檔名稱作爲結尾。如果你用到不止一個單字的話，請用底線區隔開來。比方說，請使用 <em>hello_world.rs</em> 而不是 <em>helloworld.rs</em>。</p>
-<p>現在請開啓 <em>main.rs</em> 文件然而後輸入範例 1-1 中的程式碼。</p>
+<p>現在請開啟 <em>main.rs</em> 文件然而後輸入範例 1-1 中的程式碼。</p>
 <p><span class="filename">檔案名稱：main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     println!(&quot;Hello, world!&quot;);
