deploy: 4f0e8acfa083ff6df725f1deab495821efcf84d1

--- a/ch02-00-guessing-game-tutorial.html
+++ b/ch02-00-guessing-game-tutorial.html
@@ -400,7 +400,7 @@ program. For now, all you need to know is that like variables, references are
 immutable by default. Hence, you need to write <code>&amp;mut guess</code> rather than
 <code>&amp;guess</code> to make it mutable. (Chapter 4 will explain references more
 thoroughly.)</p>
-<h3><a class="header" href="#handling-potential-failure-with-the-result-type" id="handling-potential-failure-with-the-result-type">Handling Potential Failure with the <code>Result</code> Type</a></h3>
+<h3><a class="header" href="#使用-result-型別處理可能的錯誤" id="使用-result-型別處理可能的錯誤">使用 <code>Result</code> 型別處理可能的錯誤</a></h3>
 <p>We’re still working on this line of code. Although we’re now discussing a third
 line of text, it’s still part of a single logical line of code. The next part
 is this method:</p>
