deploy: 611d9fd8e7331fa7b28ffe85cb6dcebd136ceeb8

--- a/ch10-02-traits.html
+++ b/ch10-02-traits.html
@@ -459,7 +459,7 @@ definition of <code>summarize_author</code> that we’ve provided. Because we’
 <p>This code prints <code>1 new tweet: (Read more from @horse_ebooks...)</code>.</p>
 <p>Note that it isn’t possible to call the default implementation from an
 overriding implementation of that same method.</p>
-<h3><a class="header" href="#traits-as-parameters" id="traits-as-parameters">Traits as Parameters</a></h3>
+<h3><a class="header" href="#特徵作爲參數" id="特徵作爲參數">特徵作爲參數</a></h3>
 <p>Now that you know how to define and implement traits, we can explore how to use
 traits to define functions that accept many different types.</p>
 <p>For example, in Listing 10-13, we implemented the <code>Summary</code> trait on the
