--- a/title-page.html
+++ b/title-page.html
@@ -181,7 +181,7 @@ contains a number of changes to reflect those improvements:</p>
 <li>Chapter 7, “Managing Growing Projects with Packages, Crates, and Modules,”
 has been mostly rewritten. The module system and the way paths work in the
 2018 Edition were made more consistent.</li>
-<li>Chapter 10 has new sections titled “Traits as Parameters” and “Returning
+<li>Chapter 10 has new sections titled “特徵作爲參數” and “Returning
 Types that Implement Traits” that explain the new <code>impl Trait</code> syntax.</li>
 <li>Chapter 11 has a new section titled “Using <code>Result&lt;T, E&gt;</code> in Tests” that
 shows how to write tests that use the <code>?</code> operator.</li>
