--- a/ch11-02-running-tests.html
+++ b/ch11-02-running-tests.html
@@ -168,53 +168,18 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#控制程式如何執行" id="控制程式如何執行">控制程式如何執行</a></h2>
-<p>Just as <code>cargo run</code> compiles your code and then runs the resulting binary,
-<code>cargo test</code> compiles your code in test mode and runs the resulting test
-binary. You can specify command line options to change the default behavior of
-<code>cargo test</code>. For example, the default behavior of the binary produced by
-<code>cargo test</code> is to run all the tests in parallel and capture output generated
-during test runs, preventing the output from being displayed and making it
-easier to read the output related to the test results.</p>
-<p>Some command line options go to <code>cargo test</code>, and some go to the resulting test
-binary. To separate these two types of arguments, you list the arguments that
-go to <code>cargo test</code> followed by the separator <code>--</code> and then the ones that go to
-the test binary. Running <code>cargo test --help</code> displays the options you can use
-with <code>cargo test</code>, and running <code>cargo test -- --help</code> displays the options you
-can use after the separator <code>--</code>.</p>
-<h3><a class="header" href="#running-tests-in-parallel-or-consecutively" id="running-tests-in-parallel-or-consecutively">Running Tests in Parallel or Consecutively</a></h3>
-<p>When you run multiple tests, by default they run in parallel using threads.
-This means the tests will finish running faster so you can get feedback quicker
-on whether or not your code is working. Because the tests are running at the
-same time, make sure your tests don’t depend on each other or on any shared
-state, including a shared environment, such as the current working directory or
-environment variables.</p>
-<p>For example, say each of your tests runs some code that creates a file on disk
-named <em>test-output.txt</em> and writes some data to that file. Then each test reads
-the data in that file and asserts that the file contains a particular value,
-which is different in each test. Because the tests run at the same time, one
-test might overwrite the file between when another test writes and reads the
-file. The second test will then fail, not because the code is incorrect but
-because the tests have interfered with each other while running in parallel.
-One solution is to make sure each test writes to a different file; another
-solution is to run the tests one at a time.</p>
-<p>If you don’t want to run the tests in parallel or if you want more fine-grained
-control over the number of threads used, you can send the <code>--test-threads</code> flag
-and the number of threads you want to use to the test binary. Take a look at
-the following example:</p>
+<p>就像 <code>cargo run</code> 會編譯你的程式碼並執行產生的二進制檔案，<code>cargo test</code> 會在測試模式編譯你的程式碼並執行產生的測試二進制檔案。你可以指定命令列選項來改變 <code>cargo test</code> 的預設行爲。舉例來說 <code>cargo test</code> 預設行爲產生的二進制執行檔會平行執行所有測試並獲取測試執行時產生的輸出，讓測試各自的輸出結果不會顯示出來，以更容易讀取相關測試的結果。</p>
+<p>有些命令列選項用於 <code>cargo test</code> 而有些則用於產生的測試二進制檔案。要分開這兩種引數，你可以先寫奧用於 <code>cargo test</code> 的引數然後加上 <code>--</code> 分隔線來區隔要用於測試二進制檔案的引數。執行 <code>cargo test --help</code> 可以顯示你能用在 <code>cargo test</code> 的選項，而執行 <code>cargo test -- --help</code> 在則會顯示你在 <code>--</code> 之後能用的選項。</p>
+<h3><a class="header" href="#平行或接續執行測試" id="平行或接續執行測試">平行或接續執行測試</a></h3>
+<p>當你執行數個測試時，它們預設會使用執行緒（thread）來平行執行。這樣測試可以更快完成，讓你可以從你或其他人的程式碼更快獲得回饋。因爲測試是同時一起執行的，請確保你的測試並不依賴其他測試或是共享的狀態。這包含共享環境，像是目前的工作目錄或是環境變數。</p>
+<p>舉例來說，假設你的每個測試都會執行些程式碼會在硬碟上產生一個檔案叫做 <em>test-output.txt</em> 並將一些資料寫入檔案中。然後每個測試讀取檔案中的資料，並判定該檔案有沒有包含特定的值，而這個值在每個測試都不相同。因爲測試同時執行，其中的測試可以能覆蓋其他測試寫入與讀取的內容。這樣其他測試就會失敗，並不是因爲程式碼不正確，而是因爲平行執行時該測試會被其他測試所影響。其中一個解決辦法是確保每個測試都寫入不同的檔案，或者也可以選擇一次只執行一個測試。</p>
+<p>如果你不想平行執行測試，或者你想要能更加掌控使用的執行緒數量，你可以傳遞 <code>--test-threads</code> 的選項以及你希望在測試執行檔使用的執行緒數量。請看一下以下範例：</p>
 <pre><code class="language-console">$ cargo test -- --test-threads=1
 </code></pre>
-<p>We set the number of test threads to <code>1</code>, telling the program not to use any
-parallelism. Running the tests using one thread will take longer than running
-them in parallel, but the tests won’t interfere with each other if they share
-state.</p>
-<h3><a class="header" href="#showing-function-output" id="showing-function-output">Showing Function Output</a></h3>
-<p>By default, if a test passes, Rust’s test library captures anything printed to
-standard output. For example, if we call <code>println!</code> in a test and the test
-passes, we won’t see the <code>println!</code> output in the terminal; we’ll see only the
-line that indicates the test passed. If a test fails, we’ll see whatever was
-printed to standard output with the rest of the failure message.</p>
-<p>As an example, Listing 11-10 has a silly function that prints the value of its
-parameter and returns 10, as well as a test that passes and a test that fails.</p>
+<p>我們將測試執行緒設爲 <code>1</code>，告訴程式不要做任何平行化。使用一條執行緒執行測試會比平行執行它們還來的久，但是如果測試有共享狀態的話，它們就會不互相影響到對方了。</p>
+<h3><a class="header" href="#顯示函式輸出結果" id="顯示函式輸出結果">顯示函式輸出結果</a></h3>
+<p>如果測試通過的話，Rust 的測試函式庫預設會獲取所有印出的標準輸出。舉例來說，如果我們在測試中呼叫 <code>println!</code> 然後測試通過的話，我們不會在終端機看到 <code>println!</code> 的輸出，我們只會看到一行表達測試通過的訊息。如果測試失敗，我們才會看到所有印出的標準輸出與失敗訊息。</p>
+<p>舉例來說，範例 11-10 有個蠢蠢的函式只會印出它的參數並回傳 10，以及一個會通過的測試與一個會失敗的測試。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust panics"><span class="boring">fn main() {}
 </span><span class="boring">
@@ -240,9 +205,8 @@ mod tests {
     }
 }
 </code></pre></pre>
-<p><span class="caption">範例 11-10: Tests for a function that calls
-<code>println!</code></span></p>
-<p>When we run these tests with <code>cargo test</code>, we’ll see the following output:</p>
+<p><span class="caption">範例 11-10：測試會呼叫 <code>println!</code> 的函式</span></p>
+<p>當我們使用 <code>cargo test</code> 執行這些程式時，我們會看到以下輸出結果：</p>
 <pre><code class="language-console">$ cargo test
    Compiling silly-function v0.1.0 (file:///projects/silly-function)
     Finished test [unoptimized + debuginfo] target(s) in 0.58s
@@ -269,16 +233,11 @@ test result: FAILED. 1 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out
 
 error: test failed, to rerun pass '--lib'
 </code></pre>
-<p>Note that nowhere in this output do we see <code>I got the value 4</code>, which is what
-is printed when the test that passes runs. That output has been captured. The
-output from the test that failed, <code>I got the value 8</code>, appears in the section
-of the test summary output, which also shows the cause of the test failure.</p>
-<p>If we want to see printed values for passing tests as well, we can tell Rust
-to also show the output of successful tests at the end with <code>--show-output</code>.</p>
+<p>注意到此輸出結果我們看不到 <code>I got the value 4</code>，這是當測試通過時印出的訊息。這個輸出被獲取走了。而測試會失敗的標準輸出 <code>I got the value 8</code> 則會出現在測試總結輸出的段落上，並同時顯示錯誤發生的原因。</p>
+<p>如果我們希望在測試通過時也能看到印出的數值，我們可以用 <code>--show-output</code> 告訴 Rust 也在成功的測試顯示輸出結果。</p>
 <pre><code class="language-console">$ cargo test -- --show-output
 </code></pre>
-<p>When we run the tests in Listing 11-10 again with the <code>--show-output</code> flag, we
-see the following output:</p>
+<p>當我們使用 <code>--show-output</code> 再次執行範例 11-10 的話，我們就能看到以下輸出：</p>
 <pre><code class="language-console">$ cargo test -- --show-output
    Compiling silly-function v0.1.0 (file:///projects/silly-function)
     Finished test [unoptimized + debuginfo] target(s) in 0.60s
@@ -314,13 +273,9 @@ test result: FAILED. 1 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out
 
 error: test failed, to rerun pass '--lib'
 </code></pre>
-<h3><a class="header" href="#running-a-subset-of-tests-by-name" id="running-a-subset-of-tests-by-name">Running a Subset of Tests by Name</a></h3>
-<p>Sometimes, running a full test suite can take a long time. If you’re working on
-code in a particular area, you might want to run only the tests pertaining to
-that code. You can choose which tests to run by passing <code>cargo test</code> the name
-or names of the test(s) you want to run as an argument.</p>
-<p>To demonstrate how to run a subset of tests, we’ll create three tests for our
-<code>add_two</code> function, as shown in Listing 11-11, and choose which ones to run.</p>
+<h3><a class="header" href="#透過名稱來執行部分測試" id="透過名稱來執行部分測試">透過名稱來執行部分測試</a></h3>
+<p>有時執行完整所有的測試會很花時間。如果你正專注於程式碼的特定部分，你可能會想要只執行與該程式碼有關的測試。你可以向 <code>cargo test</code> 傳遞你想要執行的測試名稱作爲引數。</p>
+<p>爲了解釋如何執行部分測試，我們將爲 <code>add_two</code> 函式建立三個測試，如範例 11-11 所示，然後選擇其中一個執行。</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
@@ -350,10 +305,8 @@ mod tests {
 }
 <span class="boring">}
 </span></code></pre></pre>
-<p><span class="caption">範例 11-11: Three tests with three different
-names</span></p>
-<p>If we run the tests without passing any arguments, as we saw earlier, all the
-tests will run in parallel:</p>
+<p><span class="caption">範例 11-11：三個名稱不同的測試</span></p>
+<p>如果我們沒有傳遞任何引數來執行測試的話，如我們前面看過的一樣，所有測試會平行執行：</p>
 <pre><code class="language-console">$ cargo test
    Compiling adder v0.1.0 (file:///projects/adder)
     Finished test [unoptimized + debuginfo] target(s) in 0.62s
@@ -373,8 +326,8 @@ running 0 tests
 test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 
 </code></pre>
-<h4><a class="header" href="#running-single-tests" id="running-single-tests">Running Single Tests</a></h4>
-<p>We can pass the name of any test function to <code>cargo test</code> to run only that test:</p>
+<h4><a class="header" href="#執行單獨一個測試" id="執行單獨一個測試">執行單獨一個測試</a></h4>
+<p>我們可以傳遞任何測試函式的名稱給 <code>cargo test</code> 來只執行該測試：</p>
 <pre><code class="language-console">$ cargo test one_hundred
    Compiling adder v0.1.0 (file:///projects/adder)
     Finished test [unoptimized + debuginfo] target(s) in 0.69s
@@ -386,15 +339,10 @@ test tests::one_hundred ... ok
 test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 2 filtered out
 
 </code></pre>
-<p>Only the test with the name <code>one_hundred</code> ran; the other two tests didn’t match
-that name. The test output lets us know we had more tests than what this
-command ran by displaying <code>2 filtered out</code> at the end of the summary line.</p>
-<p>We can’t specify the names of multiple tests in this way; only the first value
-given to <code>cargo test</code> will be used. But there is a way to run multiple tests.</p>
-<h4><a class="header" href="#filtering-to-run-multiple-tests" id="filtering-to-run-multiple-tests">Filtering to Run Multiple Tests</a></h4>
-<p>We can specify part of a test name, and any test whose name matches that value
-will be run. For example, because two of our tests’ names contain <code>add</code>, we can
-run those two by running <code>cargo test add</code>:</p>
+<p>只有名稱爲 <code>one_hundred</code> 的測試會執行，其他兩個的名稱並不符合。測試輸出會在總結的最後顯示 <code>2 filtered out</code> 告訴我們除了命令列執行的測試以外，還有更多其他測試。</p>
+<p>我們無法用此方式指定多個測試名稱，只有第一個傳給 <code>cargo test</code> 有用。但我們有其他方式能執行數個測試。</p>
+<h4><a class="header" href="#過濾執行數個測試" id="過濾執行數個測試">過濾執行數個測試</a></h4>
+<p>我們可以指定部分測試名稱，然後任何測試名稱中有相符的就會被執行。舉例來說，因爲我們有兩個測試的名稱都包含 <code>add</code>，我們可以透過執行 <code>cargo test add</code> 來執行這兩個測試：</p>
 <pre><code class="language-console">$ cargo test add
    Compiling adder v0.1.0 (file:///projects/adder)
     Finished test [unoptimized + debuginfo] target(s) in 0.61s
@@ -407,16 +355,9 @@ test tests::add_two_and_two ... ok
 test result: ok. 2 passed; 0 failed; 0 ignored; 0 measured; 1 filtered out
 
 </code></pre>
-<p>This command ran all tests with <code>add</code> in the name and filtered out the test
-named <code>one_hundred</code>. Also note that the module in which a test appears becomes
-part of the test’s name, so we can run all the tests in a module by filtering
-on the module’s name.</p>
-<h3><a class="header" href="#ignoring-some-tests-unless-specifically-requested" id="ignoring-some-tests-unless-specifically-requested">Ignoring Some Tests Unless Specifically Requested</a></h3>
-<p>Sometimes a few specific tests can be very time-consuming to execute, so you
-might want to exclude them during most runs of <code>cargo test</code>. Rather than
-listing as arguments all tests you do want to run, you can instead annotate the
-time-consuming tests using the <code>ignore</code> attribute to exclude them, as shown
-here:</p>
+<p>此命令會執行所有名稱中包含 <code>add</code> 的測試，並過濾掉 <code>one_hundred</code> 的測試名稱。另外測試所在的模組也屬於測試名稱中，所以我們可以透過過濾模組名稱來執行該模組的所有測試。</p>
+<h3><a class="header" href="#忽略某些測試除非特別指定" id="忽略某些測試除非特別指定">忽略某些測試除非特別指定</a></h3>
+<p>有時後有些特定的測試執行會花非常多時間，所以你可能希望在執行 <code>cargo test</code> 時能排除它們。與其列出所有你想要的測試作爲引數，你可以在花石間的測試前加上 <code>ignore</code> 屬性詮釋來排除它們，如以下所示：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">#[test]
 fn it_works() {
@@ -431,8 +372,7 @@ fn expensive_test() {
 <span class="boring">
 </span><span class="boring">fn main() {}
 </span></code></pre></pre>
-<p>After <code>#[test]</code> we add the <code>#[ignore]</code> line to the test we want to exclude. Now
-when we run our tests, <code>it_works</code> runs, but <code>expensive_test</code> doesn’t:</p>
+<p>對於想排除的測試，我們在 <code>#[test]</code> 之後我們加上 <code>#[ignore]</code>。現在當我們執行我們的測試時，<code>it_works</code> 會執行但 <code>expensive_test</code> 就不會：</p>
 <pre><code class="language-console">$ cargo test
    Compiling adder v0.1.0 (file:///projects/adder)
     Finished test [unoptimized + debuginfo] target(s) in 0.60s
@@ -451,8 +391,7 @@ running 0 tests
 test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 
 </code></pre>
-<p>The <code>expensive_test</code> function is listed as <code>ignored</code>. If we want to run only
-the ignored tests, we can use <code>cargo test -- --ignored</code>:</p>
+<p><code>expensive_test</code> 函式會列在 <code>ignored</code>，如果我們希望只執行被忽略的測試，我們可以使用 <code>cargo test -- --ignored</code>：</p>
 <pre><code class="language-console">$ cargo test -- --ignored
    Compiling adder v0.1.0 (file:///projects/adder)
     Finished test [unoptimized + debuginfo] target(s) in 0.61s
@@ -470,10 +409,14 @@ running 0 tests
 test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 
 </code></pre>
-<p>By controlling which tests run, you can make sure your <code>cargo test</code> results
-will be fast. When you’re at a point where it makes sense to check the results
-of the <code>ignored</code> tests and you have time to wait for the results, you can run
-<code>cargo test -- --ignored</code> instead.</p>
+<p>透過控制哪些測試能執行，你能夠確保快速執行 <code>cargo test</code>。當你有時間能夠執行 <code>ignored</code> 的測試時，你可以執行 <code>cargo test -- --ignored</code> 來等待結果。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/ch11-02-running-tests.md">e5ed971</a></li>
+<li>updated: 2020-09-17</li>
+</ul>
+</blockquote>
 
                     </main>
 
